[package]
name = "zenoh_topic_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
ftail = { version = "0.3.0", features = ["timezone"] }
html-escape = "0.2.13"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"]}
warp = { version = "0.4.2", features = ["server"]}
zenoh = "1.5.1"
